--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
             - uses: actions/checkout@v4
             - run: bun install
             - run: sudo apt-get update && sudo apt-get install -y curl grep coreutils
+            - run: python -m pip install matplotlib numpy pillow
             - run: >-
                   curl -L $(
                   curl -s https://api.github.com/repos/aspizu/goboscript/releases/latest |
